--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 version: 3
-endpoint: https://stackbuilder.hasura.app
+endpoint: http://localhost:8080
 metadata_directory: metadata
 actions:
   kind: synchronous
-  handler_webhook_baseurl: http://localhost:3000
+  handler_webhook_baseurl: http://localhost:8080
