matches prod now

--- a/metadata/databases/default/tables/tables.yaml
+++ b/metadata/databases/default/tables/tables.yaml
@@ -2,6 +2,7 @@
 - "!include public_game_types.yaml"
 - "!include public_games.yaml"
 - "!include public_limits.yaml"
+- "!include public_sessions.yaml"
 - "!include public_transactions.yaml"
 - "!include public_users.yaml"
 - "!include public_venues.yaml"
