--- a/metadata/databases/default/tables/public_blinds.yaml
+++ b/metadata/databases/default/tables/public_blinds.yaml
@@ -2,9 +2,9 @@ table:
   name: blinds
   schema: public
 select_permissions:
-- permission:
-    columns:
-    - id
-    - name
-    filter: {}
-  role: user
+  - role: user
+    permission:
+      columns:
+        - id
+        - name
+      filter: {}
