--- a/metadata/databases/default/tables/public_venues.yaml
+++ b/metadata/databases/default/tables/public_venues.yaml
@@ -2,48 +2,49 @@ table:
   name: venues
   schema: public
 object_relationships:
-- name: user
-  using:
-    foreign_key_constraint_on: user_id
+  - name: user
+    using:
+      foreign_key_constraint_on: user_id
 array_relationships:
-- name: games
-  using:
-    foreign_key_constraint_on:
-      column: venue_id
-      table:
-        name: games
-        schema: public
+  - name: games
+    using:
+      foreign_key_constraint_on:
+        column: venue_id
+        table:
+          name: games
+          schema: public
 insert_permissions:
-- permission:
-    backend_only: false
-    check:
-      user_id:
-        _eq: X-Hasura-User-Id
-    columns:
-    - name
-    set:
-      user_id: x-hasura-user-id
-  role: user
+  - role: user
+    permission:
+      check:
+        user_id:
+          _eq: X-Hasura-User-Id
+      set:
+        user_id: x-hasura-user-id
+      columns:
+        - name
 select_permissions:
-- permission:
-    columns:
-    - id
-    - name
-    - updated_at
-    - user_id
-    filter:
-      user_id:
-        _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - id
+        - is_deleted
+        - name
+        - updated_at
+        - user_id
+      filter:
+        user_id:
+          _eq: X-Hasura-User-Id
 update_permissions:
-- permission:
-    check:
-      user_id:
-        _eq: X-Hasura-User-Id
-    columns:
-    - name
-    - updated_at
-    filter:
-      user_id:
-        _eq: X-Hasura-User-Id
-  role: user
+  - role: user
+    permission:
+      columns:
+        - is_deleted
+        - name
+        - updated_at
+      filter:
+        user_id:
+          _eq: X-Hasura-User-Id
+      check:
+        user_id:
+          _eq: X-Hasura-User-Id
