hand game session

--- a/metadata/databases/default/tables/public_hands.yaml
+++ b/metadata/databases/default/tables/public_hands.yaml
@@ -1,6 +1,16 @@
 table:
   name: hands
   schema: public
+object_relationships:
+  - name: game
+    using:
+      foreign_key_constraint_on: game_id
+  - name: hands_user
+    using:
+      foreign_key_constraint_on: user_id
+  - name: user
+    using:
+      foreign_key_constraint_on: session_id
 insert_permissions:
   - role: user
     permission:
@@ -13,6 +23,7 @@ insert_permissions:
         - hand
         - session_id
         - is_draft
+        - game_id
 select_permissions:
   - role: user
     permission:
@@ -24,6 +35,7 @@ select_permissions:
         - created_date
         - is_draft
         - modified_date
+        - game_id
       filter:
         user_id:
           _eq: X-Hasura-User-Id
@@ -33,6 +45,7 @@ update_permissions:
       columns:
         - hand
         - is_draft
+        - game_id
       filter:
         user_id:
           _eq: X-Hasura-User-Id
