--- a/metadata/databases/default/tables/public_games.yaml
+++ b/metadata/databases/default/tables/public_games.yaml
@@ -18,6 +18,13 @@ object_relationships:
     using:
       foreign_key_constraint_on: venue_id
 array_relationships:
+  - name: hands
+    using:
+      foreign_key_constraint_on:
+        column: game_id
+        table:
+          name: hands
+          schema: public
   - name: sessions
     using:
       foreign_key_constraint_on:
